'couple of  changes